Fix layout para celulares

--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -8,7 +8,7 @@
 <AuthorizeView>
     <Authorized>
         <MudLayout>
-            <MudAppBar Elevation="0" Dense="false" ToolBarClass="pt-10 pb-10 pl-3">
+            <MudAppBar Elevation="0" Dense="false" ToolBarClass="pt-8 pb-8 pl-3">
                 @if (_breakpoint != Breakpoint.Xs)
                 {
                     <MudIconButton OnClick="@ToggleLeftOpen" Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" />
@@ -34,14 +34,14 @@
     <NotAuthorized>
         @if (IsAnonymous())
         {
-            <MudAppBar Elevation="0" Dense="false" ToolBarClass="pt-10 pb-10 pl-3">
+            <MudAppBar Elevation="0" Dense="false" ToolBarClass="pt-8 pb-8 pl-3">
                 <VoltarButton />
                 <MudSpacer />
                 <ThemeIconButton @bind-IsDark="@_isDark" OnClick="@ToggleTheme" />
                 <HomeButton Rota="/"/>
             </MudAppBar>
             <CascadingValue Name="IsDarkTheme" Value="@_isDark">
-                <MudStack AlignItems="AlignItems.Center" Justify="Justify.Center" Style="height: 100vh;">
+                <MudStack AlignItems="AlignItems.Center" Justify="Justify.Center" Style="min-height: 100vh;" Class="pt-20">
                     <!-- MudBlazor não sabe lidar com height: 100vh;-->
                 <!--<MudContainer Class="d-flex justify-center align-center" Style="height: 100vh;">
                    <MudContainer MaxWidth="MaxWidth.ExtraExtraLarge" Class="min-vh-100 d-flex flex-column justify-content-center align-items-center overflow-auto">-->
