--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -21,7 +21,7 @@
                 <Modulum.Client.Shared.NavMenu />
             </MudDrawer>
             <MudMainContent Class="pb-12 pt-20">
-                <MudStack Class="pa-10">
+                <MudStack>
                         @Body
                 </MudStack>
                 @if (_breakpoint == Breakpoint.Xs)
