--- a/Pages/Content/SystemList.razor
+++ b/Pages/Content/SystemList.razor
@@ -37,7 +37,9 @@
 
     private void AdicionarNovoSistema()
     {
+        _loadingService.Show();
         _navigationManager.NavigateTo("/System/Create");
+        _loadingService.Hide();
     }
 
     public class SistemaModel
