--- a/App.razor
+++ b/App.razor
@@ -12,29 +12,12 @@
             <FocusOnNavigate RouteData="@routeData" Selector="h1" />
         </Found>
         <NotFound>
-            <CascadingAuthenticationState>
-                <LayoutView Layout="@typeof(Client.Shared.NotFoundLayout)">
-                    <p>Desculpe, não há nada neste endereço.</p>
-                </LayoutView>
-            </CascadingAuthenticationState>
-            <PageTitle>Not found</PageTitle>
-            <LayoutView Layout="@typeof(MainLayout)">
-                <p role="alert">Desculpe, não foi encontrado nada nede endereço</p>
+            <LayoutView Layout="@typeof(Client.Shared.MainLayout)">
+                <Modulum.Client.Shared.NotFoundLayout />
             </LayoutView>
         </NotFound>
     </Router>
 </CascadingAuthenticationState>
-
-<!--<CascadingAuthenticationState>
-    <AuthorizeView>
-        <Authorized>
-            @RouterWithLayout(typeof(Client.Shared.MainLayout))
-        </Authorized>
-        <NotAuthorized>
-            @RouterWithLayout(typeof(Client.Shared.MainLayout))
-        </NotAuthorized>
-    </AuthorizeView>
-</CascadingAuthenticationState>-->
 
 @code {
 
@@ -60,19 +43,4 @@
 
         await Task.CompletedTask;
     }
-    //RenderFragment RouterWithLayout(Type layoutType) => __builder =>
-    //{
-    //    <Router AppAssembly="@typeof(Program).Assembly">
-    //        <Found Context="routeData">
-    //            <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@layoutType" />
-    //            <FocusOnNavigate RouteData="@routeData" Selector="h1" />
-    //        </Found>
-    //        <NotFound>
-    //            <PageTitle>Not found</PageTitle>
-    //            <LayoutView Layout="@layoutType">
-    //                <p>Sorry, there's nothing at this address.</p>
-    //            </LayoutView>
-    //        </NotFound>
-    //    </Router>
-    //};
 }
