--- a/Pages/Criacao/Criacao.razor
+++ b/Pages/Criacao/Criacao.razor
@@ -1,10 +1,7 @@
-﻿@page "/System/Create"
+﻿@page "/system/create"
 @using modulum.Shared.Enum
 
 <MudContainer Class="my-4 px-4">
-    <MudOverlay @bind-Visible="@_loading" DarkBackground="true" Absolute="true">
-        <modulum.Shared.Loading />
-    </MudOverlay>
     <MudText Typo="Typo.h4" Style="font-weight: bold" Class="ml-4">
         <MudIcon Icon="@Icons.Material.Filled.Insights" Class="mr-1 mb-n1" Size="Size.Large" />
         Criação
@@ -26,7 +23,8 @@
                         @bind-Value="_modelDynamic.tableRequest.NomeTela" 
                         Variant="Variant.Text" 
                         Class="mb-1 mud-width-full"
-                        Required="true"/>
+                        Required="true"
+                        Disabled="@_loading" />
                 </MudPaper>
             </MudItem>
             <MudItem xs="12" md="4">
@@ -50,7 +48,8 @@
                                Class="mb-3"
                                Required="true"
                                For="@(() => _modelDynamic.fieldRequest.Tipo)"
-                               OnBlur="@OnTipoChanged">
+                               OnBlur="@OnTipoChanged"
+                               Disabled="@_loading">
                         @foreach (TypeColumnEnum? value in Enum.GetValues(typeof(TypeColumnEnum)))
                         {
                             <MudSelectItem T="TypeColumnEnum?" Value="@value">@GetDisplayText(value)</MudSelectItem>
@@ -64,9 +63,9 @@
                         Variant="Variant.Text" 
                         InputType="InputType.Number" 
                         Class="mb-3" T="int?"
-                        Disabled="@(_modelDynamic.fieldRequest.Tipo != TypeColumnEnum.VARCHAR)" />
+                                  Disabled="@((_modelDynamic.fieldRequest.Tipo != TypeColumnEnum.VARCHAR) | _loading )" />
                     <MudCheckBox T="bool" Label="Campo Obrigatório" Class="mb-3" @bind-Value="_modelDynamic.fieldRequest.IsObrigatorio" />
-                    <MudButton Color="Color.Primary" OnClick="@AdicionarCampo" Variant="Variant.Text">Adicionar</MudButton>
+                    <MudButton Color="Color.Primary" OnClick="@AdicionarCampo" Variant="Variant.Text" Disabled="@_loading">Adicionar</MudButton>
                 </MudPaper>
             </MudItem>
 
@@ -87,7 +86,7 @@
                                         <MudIconButton Icon="@Icons.Material.Filled.Delete"
                                                        Color="Color.Error"
                                                        Size="Size.Small"
-                                                       Disabled="@campo.IsPrimaryKey"
+                                                       Disabled="@(campo.IsPrimaryKey | _loading)"
                                                        OnClick="@(() => RemoverCampo(campo))" />
                                     </MudItem>
                                 </MudGrid>
@@ -100,17 +99,25 @@
         <MudGrid Class="pt-4 mt-4" Spacing="0">
             <MudItem xs="12">
                 <MudStack Justify="Justify.FlexEnd">
-                    <MudButton Class="px-8"
-                            StartIcon="@Icons.Material.Filled.SaveAlt"
+                    <MudButton 
+                            Class="px-8"
+                            StartIcon="@(_loading ? "" : Icons.Material.Filled.SaveAlt)"
                             IconSize="Size.Large"
                             Variant="Variant.Filled"
                             Style="height: 60px;"
                             Color="Color.Primary"
                             Href=""
-                            OnClick="@DoSalvarAsync" >
-                        <MudText Typo="Typo.h6">
-                            Criar
-                        </MudText>
+                            OnClick="@DoSalvarAsync" 
+                            Disabled="@_loading">
+                            @if (_loading)
+                            {
+                                <MudProgressCircular Class="ms-n1" Size="Size.Small" Indeterminate="true" />
+                                <MudText Class="ms-2">Criando...</MudText>
+                            }
+                            else
+                            {
+                                <MudText>Criar</MudText>
+                            }
                     </MudButton>
                 </MudStack>
             </MudItem>
